syntax = "proto3";

// status is a uint16 value 
enum Status {
  Success = 0;
  // client defined

  // client error 100-200
  NoDestination = 100;
  InvalidPacketBody = 101;
  InvalidCommand = 103;
  Unauthorized = 105 ;
  // server error 300-400
  SystemException = 300;
  NotImplemented = 301;
  //specific error
  SessionNotFound = 404; // session lost
}

enum MetaType {
  int = 0;
  string = 1;
  float = 2;
}

enum ContentType {
  Protobuf = 0;
  Json = 1;
}

enum Flag {
  Request = 0;
  Response = 1;
  Push = 2;
}

message Meta {
  string key = 1;
  string value = 2;
  MetaType type = 3;
}

message Header {
  string command = 1;
  uint32 sequence = 2;
  Flag flag = 3;
  Status status = 4;
}

message InnerHandshakeReq{
  string ServiceId = 1;
}

message InnerHandshakeResponse{
  uint32 Code = 1;
  string  Error = 2;
}